fix scrollbar show issue on nancontent

--- a/public/less/nanoScroller.less
+++ b/public/less/nanoScroller.less
@@ -25,9 +25,6 @@
     }
   }
   > .@{paneClass} {
-    //ARRRRRRGGGGGHHHHHHHHHHHHHHHHHHHHHHhhhhhhhhhh.....
-    //remove this important jp 7/12/15
-    display: block !important;
     background: rgba(0,0,0,0);
     position:absolute;
     width:10px;
